Some updates after FindBugs run.